--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -52,12 +52,9 @@ jobs:
           mkdir "$(Build.SourcesDirectory)/SDK"
         displayName: 'Setup'
 
-      - task: DownloadBuildArtifacts@0
+      - task: CmdLine@2
         inputs:
-          buildType: 'current'
-          downloadType: 'specific'
-          itemPattern: '/home/vsts/.config/NuGet/NuGet.Config'
-          downloadPath: '$(System.ArtifactsDirectory)'
+          script: 'cat /home/vsts/.config/NuGet/NuGet.Config'
 
       - task: CMake@1
         displayName: Generate
