--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -52,6 +52,11 @@ jobs:
           mkdir "$(Build.SourcesDirectory)/SDK"
         displayName: 'Setup'
     
+      - task: UseDotNet@2
+        inputs:
+          packageType: 'sdk'
+          version: 
+
       - task: CMake@1
         displayName: Generate
         inputs:
