Update pipeline-build.yml for Azure Pipelines

--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -52,11 +52,9 @@ jobs:
           mkdir "$(Build.SourcesDirectory)/SDK"
         displayName: 'Setup'
     
-      - task: UseDotNet@2
+      - task: NuGetToolInstaller@1
         inputs:
-          packageType: 'sdk'
-          version: 
-
+          versionSpec: 
       - task: CMake@1
         displayName: Generate
         inputs:
