--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -52,8 +52,10 @@ jobs:
           mkdir "$(Build.SourcesDirectory)/SDK"
         displayName: 'Setup'
     
-
-
+      - task: UseDotNet@2
+        inputs:
+          packageType: 'sdk'
+          version: 
       - task: CMake@1
         displayName: Generate
         inputs:
