--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -51,8 +51,10 @@ jobs:
           sudo update-alternatives --set c++ /usr/bin/$(CXX)
           mkdir "$(Build.SourcesDirectory)/SDK"
         displayName: 'Setup'
-
-    
+      - task: UseDotNet@2
+        inputs:
+          packageType: 'sdk'
+          version: 
       - task: CMake@1
         displayName: Generate
         inputs:
