Update pipeline-build.yml for Azure Pipelines

--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -52,6 +52,11 @@ jobs:
           mkdir "$(Build.SourcesDirectory)/SDK"
         displayName: 'Setup'
       
+      - task: Bash@3
+        inputs:
+          targetType: 'inline'
+          script: 'msbuild /t:restore'
+      
       - task: NuGetAuthenticate@0
       - task: CMake@1
         displayName: Generate
