--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -56,5 +56,6 @@ jobs:
         displayName: Generate
         inputs:
           workingDirectory: cmake-build
+          runInsideShell: true
           cmakeArgs: $(CMAKE_GENERATE_ARGS) -DCMAKE_INSTALL_PREFIX=$(Build.SourcesDirectory)/SDK -DCMAKE_BUILD_TYPE=RelWithDebInfo -DURHO3D_SAMPLES=ON -DURHO3D_CSHARP=$(URHO3D_CSHARP) -DURHO3D_PACKAGING=ON -DBUILD_SHARED_LIBS=$(BUILD_SHARED_LIBS) $(Build.SourcesDirectory)
     
