--- a/.ci/pipeline-build.yml
+++ b/.ci/pipeline-build.yml
@@ -9,8 +9,7 @@ variables:
 
 jobs:
   - job: Linux
-    pool:
-      vmImage: 'ubuntu-latest'
+    pool: v-aprozo
 
     variables:
       CMAKE_GENERATE_ARGS: -G Ninja
